--- a/research/trails.ipynb
+++ b/research/trails.ipynb
@@ -448,7 +448,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mchatbot",
+   "display_name": "hate",
    "language": "python",
    "name": "python3"
   },
